=== ongoing ===

=== 0.3 ===

- Made image field optional
- Removed cms-plugin model
- Added slug for category model 
- Extended field lengths
- Added get_linklist templatetag

=== 0.2 ===

- Added LinkCategory model and CMSLinklistCategoryPlugin. This allows to have
  several different link lists on different pages of your site.

=== 0.1 ===

- Initial commit