@@ -1,5 +1,7 @@
 === ongoing ===
 
+- get_linklist now can take a comma separated list of partners
+
 === 0.3 ===
 
 - Made image field optional
